# MaxiArr

./: .env.example  .gitignore  README.md  docker-compose.yml  prek.toml  setup.bat  setup.sh
telegram-bot/: Dockerfile  README.md  main.py  pyproject.toml
telegram-bot/bot/: __init__.py  agent.py  config.py  handlers.py  helpers.py  logging_filters.py
